<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fr_update_customer_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_dp_size"
        app:cardCornerRadius="@dimen/small_dp_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/fr_update_customer_photo"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:contentDescription="@string/customer_photo"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_baseline_add_a_photo_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/medium_dp_size">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fr_update_customer_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_name"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fr_update_customer_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/customer_phone_number"

                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fr_update_customer_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_dp_size"
                    android:hint="@string/customer_balance"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_dp_size"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fr_update_customer_btn_save"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_dp_size"
                    android:text="@string/save_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fr_update_customer_btn_cancel"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_btn" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/fr_update_customer_btn_delete"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_btn" />
            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.appcompat.widget.LinearLayoutCompat>